--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,3 +1,9 @@
+
+@import "variables";
+@import "base";
+@import "components";
+@import "layout";
+
 body {
   background-color: #fbc547;
   color: #333;
@@ -22,3 +28,4 @@ a {
   margin-bottom: 1rem;
   width: 10rem;
 }
+
