working sass typography and navbar

--- a/source/stylesheets/_components.scss
+++ b/source/stylesheets/_components.scss
@@ -1,6 +1,12 @@
 
 /* components */
 
+// NAVBAR
+.navbar .navbar__link {
+  font-size: 1.6rem;
+  color: #433754;
+}
+
 /* button */
 /* card */
 /* form */
