--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -1,6 +1,8 @@
 
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,900');
+
 body {
-    font-family: "Lato", sans-serif;
+    font-family: 'Montserrat', sans-serif;    // font-family: "Lato", sans-serif;
     font-weight: 400;
     /* font-size: 16px; */
     line-height: 1.7;
