--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,9 +2,11 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8">
   <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,900" rel="stylesheet">
 
   <%= stylesheet_link_tag "stylesheets/site" %>
   <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
