--- a/source/stylesheets/_typography.scss
+++ b/source/stylesheets/_typography.scss
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,900');
+// @import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,900');
 
 body {
     font-family: 'Montserrat', sans-serif;    // font-family: "Lato", sans-serif;
