--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,6 +16,10 @@
 
 <body>
 
+<header>
+  header
+</header>
+
 <nav>
   <ul class="navbar">
     <li><a href="#">one</a></li>
@@ -25,6 +29,12 @@
   </ul>
 </nav>
 
+<main>
+  main
+</main>
+
+
+<!-- BEGIN FIX -->
 <div id="main" role="main">
   <%= yield %>
 </div>
@@ -51,6 +61,12 @@
     <% end %>
   </ol>
 </aside>
+<!-- END FIX -->
+
+
+<footer>
+  footer
+</footer>
 
 </body>
 
