--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,21 +17,43 @@
 <body>
 
 <header>
-  header
+  <h1>header</h1>
+
+  <nav class="top-nav">
+    <ul class="top-nav__box">
+      <li class="top-nav__item">
+        <a href="#" class="top-nav__link">one</a>
+      </li>
+      <li><a href="#">two</a></li>
+      <li><a href="#">three</a></li>
+      <li><a href="#">four<a/></li>
+    </ul>
+  </nav>
 </header>
 
-<nav>
-  <ul class="navbar">
-    <li><a href="#">one</a></li>
-    <li><a href="#">two</a></li>
-    <li><a href="#">three</a></li>
-    <li><a href="#">four<a/></li>
-  </ul>
-</nav>
 
 <main>
-  main
+  <h1>main</h1>
+
+  <article>
+    <h1>article#1</h1>
+
+    <section>
+      section#1
+    </section>
+    <section>
+      section#2
+    </section>
+    <section>
+      section#3
+    </section>
+  </article>
+
 </main>
+
+<aside>
+  right aside
+</aside>
 
 
 <!-- BEGIN FIX -->
