--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,7 +8,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,900" rel="stylesheet">
 
-  <%= stylesheet_link_tag "stylesheets/site" %>
+  <%= stylesheet_link_tag :site, media: "screen" %>
   <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
 
   <title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
