--- a/source/styles/_base.scss
+++ b/source/styles/_base.scss
@@ -33,7 +33,7 @@ body {
   }
 
   background-color: $color-grey-light-1;
-  box-shadow: inset 0 15px #701516;
+  box-shadow: inset 0 15px $color-grey-dark;
   min-height: 100vh;
 }
 
