remove middleman reference and link from index html

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,13 +14,14 @@ title: Welcome to Middleman
 </svg>
 -->
 
-<h1>
-  Middleman is Running
-</h1>
 
-<%= link_to(
+<%= 
+=begin
+link_to(
   "Read Documentation",
   "https://middlemanapp.com/basics/templating_language/",
   target: "_blank"
-) %>
+) 
+=end
+%>
 
