--- a/source/styles/_variables.scss
+++ b/source/styles/_variables.scss
@@ -39,3 +39,13 @@ $bp-medium: 56.25em;   // 900px
 $bp-small: 37.5em;     // 600px
 $bp-smallest: 31.25em; // 500px
 
+
+// BOX SHADOWS
+$shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
+$shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
+
+
+// LINES
+$line: 1px solid $color-grey-light-2;
+
+
