--- a/source/styles/_layout.scss
+++ b/source/styles/_layout.scss
@@ -1,17 +1,20 @@
 
+// container
 .container {
-    max-width: 120rem;
-    margin: 8rem auto;
-    background-color: var(--color-grey-light-1);
-    box-shadow: var(--shadow-dark);
+  max-width: 120rem;
+  margin: 8rem auto;
+  background-color: $color-white;
+  box-shadow: $shadow-dark;
 
-    min-height: 50rem;
+  min-height: 50rem;
 
-    @media only screen and (max-width: $bp-largest) {
-        margin: 0;
-        max-width: 100%;
-        width: 100%;
-    }
+  @media only screen and (max-width: $bp-largest) {
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+  }
+
+  padding: 10rem;
 }
 
 /* header */
