--- a/source/styles/_typography.scss
+++ b/source/styles/_typography.scss
@@ -2,11 +2,13 @@
 // @import url('https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,900');
 
 body {
-    font-family: 'Montserrat', sans-serif;    // font-family: "Lato", sans-serif;
-    font-weight: 400;
-    /* font-size: 16px; */
-    line-height: 1.7;
-    color: $color-grey-dark;
+  font-family: monospace, serif; 
+  // font-family: 'Montserrat', sans-serif;    
+  // font-family: "Lato", sans-serif;
+  font-weight: 400;
+  /* font-size: 16px; */
+  line-height: 1.7;
+  color: $color-grey-dark-3;
 }
 
 .heading-primary {
