--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -19,7 +19,7 @@
 <div class="container">
 
 <header>
-  <h2>home</h2>
+  <h2>Home</h2>
 
   <nav class="social-nav">
     <div class="social-nav__item">
