--- a/source/posts/2019-02-28-test-post.html.md.erb
+++ b/source/posts/2019-02-28-test-post.html.md.erb
@@ -1,13 +1,13 @@
 ---
 
 title: Test Post
+summary: the most important information about the article / post
 date: 2019-02-28
 author: metapsj
-lead: the most important information about the article / post
 category: Fire
 tags: Middleman, Testing
 thumb: pubsub.png
-featured: true
+featured: false
 published: true
 
 ---
