--- a/source/posts/2019-03-04-messing-with-time-zone-settings.html.md.erb
+++ b/source/posts/2019-03-04-messing-with-time-zone-settings.html.md.erb
@@ -1,13 +1,13 @@
 ---
 
 title: Messing with time zone settings
+summary: the most important information about the article / post
 date: 2019-03-04 11:59 PST
 author: metapsj
-lead: the most important information about the article / post
 category: Middleman
 tags: testing, time-zone 
 thumb: pubsub.png
-featured: true
+featured: false
 published: true
 
 ---
