--- a/source/posts/2019-03-04-something-about-a-custom-default-template-for-articles.html.md.erb
+++ b/source/posts/2019-03-04-something-about-a-custom-default-template-for-articles.html.md.erb
@@ -1,13 +1,13 @@
 ---
 
 title: Something about a custom default template for articles 
+summary: the most important information about the article / post
 date: 2019-03-04 12:13 PST
 author: metapsj
-lead: the most important information about the article / post
 category: Middleman
 tags: template, custom, testing
 thumb: pubsub.png
-featured: true
+featured: false
 published: true
 
 ---
