style post as component

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -40,20 +40,22 @@
 
 
 <main>
-  <h2>Recent</h2>
+  <h2>Latest</h2>
 
   <% blog.articles[0...5].each do |article| %>
-    <article>
-      <%= link_to article.title, article %>
-      <div><%= article.date.strftime('%B %e %Y') %></div>
-      <p><%= article.summary %></p>
-      <a href="<%= article.url %>">Read More</a>
+    <article class="post">
+      <%= link_to article.title, article, class: "post__title" %>
+      <div class="post__date"><%= article.date.strftime('%B %e %Y') %></div>
+      <p class="post__summary"><%= article.summary %></p>
+      <a href="<%= article.url %>" class="post__more">Read More</a>
     </article>
 
     <br />
   <% end %>
 
 </main>
+
+
 
 <aside>
   <h2>Tags</h2>
