--- a/source/styles/_components.scss
+++ b/source/styles/_components.scss
@@ -7,6 +7,26 @@
   color: #433754;
 }
 
+// POST
+.post {
+
+  &__title {
+    font-size: 4.5rem;
+    text-decoration: none;
+    color: #4788f2;
+  }
+
+  &__date {
+  }
+
+  &__summary {
+  }
+
+  &__more {
+  }
+
+}
+
 /* button */
 /* card */
 /* form */
