--- a/source/styles/_typography.scss
+++ b/source/styles/_typography.scss
@@ -11,6 +11,13 @@ body {
   color: $color-grey-dark-3;
 }
 
+.post {
+
+  &__title {
+  }
+
+}
+
 .heading-primary {
     color: $color-white;
     text-transform: uppercase;
