add multiple summaries to frontmatter adhering to yaml conventions

--- a/source/posts/2019-02-28-test-post.html.md.erb
+++ b/source/posts/2019-02-28-test-post.html.md.erb
@@ -1,7 +1,11 @@
 ---
 
 title: Test Post
-summary: this is a test post created with the middleman cli e.g. middleman article "Test Post"
+summary: >
+ Interdum et malesuada fames ac ante ipsum primis in faucibus. 
+ Pellentesque ac libero vitae augue tincidunt fermentum. Phasellus tincidunt, 
+ felis nec porta egestas, dolor nunc aliquet nisi, eget venenatis eros dui 
+ eget enim. Vivamus mollis ultricies lobortis. Aliquam erat volutpat.
 date: 2019-02-28
 author: metapsj
 category: Fire
