--- a/source/posts/2019-03-04-messing-with-time-zone-settings.html.md.erb
+++ b/source/posts/2019-03-04-messing-with-time-zone-settings.html.md.erb
@@ -1,7 +1,12 @@
 ---
 
 title: Messing with time zone settings
-summary: Messing with the time zone settings in Middleman
+summary: > 
+  Phasellus ac ullamcorper velit. Aenean ullamcorper, diam rutrum consequat 
+  pellentesque, sem enim venenatis mi, pulvinar pellentesque nulla nunc vel dui. 
+  Praesent bibendum, turpis pharetra malesuada mattis, tortor dolor mattis odio, 
+  nec auctor nisi felis quis justo. Quisque porta mi libero, et ultricies neque 
+  egestas bibendum.
 date: 2019-03-04 11:59 PST
 author: metapsj
 category: Middleman
