--- a/source/posts/2019-03-04-something-about-a-custom-default-template-for-articles.html.md.erb
+++ b/source/posts/2019-03-04-something-about-a-custom-default-template-for-articles.html.md.erb
@@ -1,7 +1,12 @@
 ---
 
 title: Something about a custom default template for articles 
-summary: Making sure the custom template works is configured and works with middleman cli
+summary: >
+  Integer in posuere turpis. Curabitur fermentum vehicula ante, posuere 
+  fermentum erat placerat et. Suspendisse sodales vel est eget dapibus. 
+  In hac habitasse platea dictumst. Nunc vel mauris magna. Mauris pharetra 
+  tellus vitae lacus finibus aliquet. Aliquam erat volutpat. Morbi cursus 
+  elit ultricies convallis dapibus.
 date: 2019-03-04 12:13 PST
 author: metapsj
 category: Middleman
