--- a/source/posts/2012-01-01-example-article.html.md.erb
+++ b/source/posts/2012-01-01-example-article.html.md.erb
@@ -1,6 +1,9 @@
 ---
 title: Example Article
-summary: This is an example article. You probably want to delete it and write your own articles! 
+summary: >
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu odio quis mauris rhoncus euismod. 
+  Morbi venenatis elit dui, quis tincidunt odio ultrices et. Donec tempus enim vel urna luctus congue. 
+  Quisque facilisis, metus quis imperdiet fringilla, mauris est iaculis diam, quis consectetur ante purus sit amet tortor.
 date: 2012-01-01
 category: something
 tags: example
