fix date time in frontmatter. rename frontmatter template.  adjust article list date time formatt

--- a/source/posts/2012-01-01-example-article.html.md.erb
+++ b/source/posts/2012-01-01-example-article.html.md.erb
@@ -4,7 +4,7 @@ summary: >
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu odio quis mauris rhoncus euismod. 
   Morbi venenatis elit dui, quis tincidunt odio ultrices et. Donec tempus enim vel urna luctus congue. 
   Quisque facilisis, metus quis imperdiet fringilla, mauris est iaculis diam, quis consectetur ante purus sit amet tortor.
-date: 2012-01-01
+date: 2012-01-01 1:11 PST
 category: something
 tags: example
 ---
