--- a/source/posts/2019-02-28-test-post.html.md.erb
+++ b/source/posts/2019-02-28-test-post.html.md.erb
@@ -6,7 +6,7 @@ summary: >
  Pellentesque ac libero vitae augue tincidunt fermentum. Phasellus tincidunt, 
  felis nec porta egestas, dolor nunc aliquet nisi, eget venenatis eros dui 
  eget enim. Vivamus mollis ultricies lobortis. Aliquam erat volutpat.
-date: 2019-02-28
+date: 2019-02-28 3:43 PST
 author: metapsj
 category: Fire
 tags: Middleman, Testing
