rename post layout. add codepen to nav

--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -29,6 +29,9 @@
       <a href="#">github</a>
     </div>
     <div>
+      <a href="#">codepen</a>
+    </div>
+    <div>
       <a href="#">rss</a>
     </div>
   </nav>
