configuring redcarpet markdown and testing options in a post

--- a/source/posts/2019-03-04-messing-with-time-zone-settings.html.md.erb
+++ b/source/posts/2019-03-04-messing-with-time-zone-settings.html.md.erb
@@ -16,6 +16,34 @@ featured: false
 published: true
 
 ---
-Messing with the time zone settings in Middleman
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu odio quis mauris rhoncus euismod. Morbi venenatis elit dui, quis tincidunt odio ultrices et. Donec tempus enim vel urna luctus congue. Quisque facilisis, metus quis imperdiet fringilla, mauris est iaculis diam, quis consectetur ante purus sit amet tortor. Etiam ac leo leo. Nulla vel ultrices enim. Aenean nec iaculis enim, sed condimentum sem. Aliquam pharetra eleifend vulputate. Pellentesque scelerisque egestas dolor, id congue metus tincidunt vitae. In hac habitasse platea dictumst. Ut commodo nulla mauris, malesuada pharetra metus feugiat ac. Fusce mattis urna in magna ullamcorper, a iaculis urna fermentum. Fusce in semper purus.
-Vestibulum fermentum porttitor posuere. Cras ac molestie nisi. Maecenas tempus pulvinar suscipit. Nam nec est mauris. Phasellus lacinia massa a hendrerit laoreet. Donec laoreet ex et condimentum vulputate. Maecenas suscipit, ex id hendrerit pulvinar, nunc velit faucibus eros, vel rhoncus odio quam quis nisi. Integer gravida convallis nulla, vitae bibendum nibh bibendum ac. Sed luctus mi non iaculis eleifend. Sed ac tincidunt turpis.
+Messing with the *time zone* settings in Middleman
+***  
+```javascript
+var s = "JavaScript syntax highlighting";
+alert(s);
+```  
+***
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu odio quis mauris rhoncus euismod. Morbi venenatis elit dui, quis tincidunt odio ultrices et. Donec tempus enim vel urna luctus congue. Quisque facilisis, metus quis imperdiet fringilla, mauris est iaculis diam, quis consectetur ante purus sit amet tortor. Etiam ac leo leo. Nulla vel ultrices enim. Aenean nec iaculis enim, sed condimentum sem. Aliquam pharetra eleifend vulputate. Pellentesque scelerisque egestas dolor, id congue metus tincidunt vitae. In hac habitasse platea dictumst. Ut commodo nulla mauris, malesuada pharetra metus feugiat ac. Fusce mattis urna in magna ullamcorper, a iaculis urna fermentum. Fusce in semper purus.  
+***
+| Tables        | Are           | Cool  |
+| ------------- |:-------------:| -----:|
+| col 3 is      | right-aligned | $1600 |
+| col 2 is      | centered      |   $12 |
+| zebra stripes | are neat      |    $1 |
+***
+Vestibulum fermentum porttitor posuere. Cras ac molestie nisi. Maecenas tempus pulvinar suscipit. Nam nec est mauris. Phasellus lacinia massa a hendrerit laoreet. Donec laoreet ex et condimentum vulputate. Maecenas suscipit, ex id hendrerit pulvinar, nunc velit faucibus eros, vel rhoncus odio quam quis nisi. Integer gravida convallis nulla, vitae bibendum nibh bibendum ac. Sed luctus mi non iaculis eleifend. Sed ac tincidunt turpis.  
+***
+```swift
+var variable = [1, 2, 3]
+
+override func viewDidLoad() {
+		super.viewDidLoad()
+
+		// some comment
+}
+```  
+***
+Quote break.  
+
+> This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep writing to make sure this is long enough to actually wrap for everyone. Oh, you can *put* **Markdown** into a blockquote.  
+
