--- a/source/styles/_components.scss
+++ b/source/styles/_components.scss
@@ -29,6 +29,9 @@
     line-height: 6rem;
   }
 
+	&__link {
+	}
+
   &__date {
     font-size: 1.6rem;
     font-weight: 600;
@@ -45,6 +48,9 @@
 
   &__more {
   }
+
+	&__body {
+	}
 
   &:last-child {
     margin-bottom: 7.5rem;
