--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -47,7 +47,7 @@
   <div class="post-box">
   <% blog.articles[0...5].each do |article| %>
     <article class="post">
-      <%= link_to article.title, article, class: "post__title" %>
+      <div class="post__title"><%= link_to article.title, article, class: "post__link" %></div>
       <div class="post__date"><%= article.date.strftime('%A, %B %e, %Y') %></div>
       <p class="post__summary"><%= article.data.summary %></p>
       <a href="<%= article.url %>" class="post__more">Read More</a>
