--- a/source/styles/_components.scss
+++ b/source/styles/_components.scss
@@ -23,13 +23,14 @@
   margin-bottom: 2.5rem;
 
   &__title {
-    font-size: 4.5rem;
-    text-decoration: none;
-    color: #4788f2;
-    line-height: 6rem;
+    font-size: 4rem;
+    color: lighten($color-black, 25%);
+    line-height: 4.5rem;
   }
 
 	&__link {
+    text-decoration: none;
+    color: #4788f2;
 	}
 
   &__date {
