--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -49,8 +49,10 @@
     <article class="post">
       <div class="post__title"><%= link_to article.title, article, class: "post__link" %></div>
       <div class="post__date"><%= article.date.strftime('%A, %B %e, %Y') %></div>
-      <p class="post__summary"><%= article.data.summary %></p>
-      <a href="<%= article.url %>" class="post__more">Read More</a>
+      <div class="post__summary">
+        <%= article.data.summary %>
+        <p><%= link_to 'Read More', article, class: "post_more" %></p>
+      </div>
     </article>
   <% end %>
   </div>
