--- a/source/styles/_components.scss
+++ b/source/styles/_components.scss
@@ -40,14 +40,11 @@
     margin-bottom: 2rem;
   }
 
-  &__summary {
+  &__summary, &__more {
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 1.85rem;
     line-height: 1.7;
     color: lighten($color-grey-dark-3, 15%);  
-  }
-
-  &__more {
   }
 
 	&__body {
