--- a/source/styles/_components.scss
+++ b/source/styles/_components.scss
@@ -48,8 +48,11 @@
   }
 
   &__more {
+    font-size: 1.6rem;
+    font-weight: 500;
     display: block;
     padding-top: 1.25rem;
+    text-transform: uppercase;
   }
 
 	&__body {
