--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,104 +1,116 @@
 <!doctype html>
 <html>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,900" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,900" rel="stylesheet">
 
-  <%= stylesheet_link_tag :site, media: "screen" %>
-  <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
+		<%= stylesheet_link_tag :site, media: "screen" %>
+		<%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
 
-  <title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
-</head>
+		<title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
+	</head>
 
-<body>
+	<body>
 
-<div class="container">
+		<div class="container">
 
-<header>
-  <h2>Home</h2>
 
-  <nav class="social-nav">
-    <div class="social-nav__item">
-      <a href="#" class="social-nav__link">twitter</a>
-    </div>
-    <div>
-      <a href="#">github</a>
-    </div>
-    <div>
-      <a href="#">codepen</a>
-    </div>
-    <div>
-      <a href="#">rss</a>
-    </div>
-  </nav>
-</header>
+			<header class="header">
+				<div class="header__item">
+					<svg class="logo">
+						<use xlink:href="images/sprite.svg#icon-feather"></use>
+					</svg>
+				</div>
 
-<br />
-<br />
-<br />
+				<form action="#" class="search">
+					<input type="text" class="search__input" placeholder="Search" />
+					<button class="search__button">
+						<svg class="search__icon">
+							<use xlink:href="images/sprite.svg#icon-magnifying-glass"></use>
+						</svg>
+					</button>
+				</form>
 
-<main>
-  <h2 class="section__label">Latest</h2>
+				<nav class="user-nav">
+					<div class="user-nav__item">
+						<svg class="user-nav__icon">
+							<use xlink:href="images/sprite.svg#icon-twitter"></use>
+						</svg>
+					</div>
+					<div class="user-nav__item">
+						<svg class="user-nav__icon">
+							<use xlink:href="images/sprite.svg#icon-github"></use>
+						</svg>
+					</div>
+					<div class="user-nav__item">
+						<svg class="user-nav__icon">
+							<use xlink:href="images/sprite.svg#icon-rss"></use>
+						</svg>
+					</div>
+				</nav>
+			</header>
 
-  <div class="post-box">
-  <% blog.articles[0...5].each do |article| %>
-    <article class="post">
-      <div class="post__title"><%= link_to article.title, article, class: "post__link" %></div>
-      <div class="post__date"><%= article.date.strftime('%A, %B %e, %Y') %></div>
-      <div class="post__summary">
-        <%= article.data.summary %>
-        <%= link_to 'Read More', article, class: "post__more" %>
-      </div>
-    </article>
-  <% end %>
-  </div>
+			<br />
 
-</main>
+			<div class="main">
 
-<aside>
-  <h2>Tags</h2>
-  <ul>
-    <% blog.tags.each do |tag, articles| %>
-      <li><%= link_to "#{tag} (#{articles.size})", tag_path(tag) %></li>
-    <% end %>
-  </ul>
+				<main>
+				<h2 class="section__label">Latest</h2>
 
-  <br />
-  <br />
+				<div class="post-box">
+					<% blog.articles[0...5].each do |article| %>
+						<article class="post">
+							<div class="post__title"><%= link_to article.title, article, class: "post__link" %></div>
+							<div class="post__date"><%= article.date.strftime('%A, %B %e, %Y') %></div>
+							<div class="post__summary">
+								<%= article.data.summary %>
+								<%= link_to 'Read More', article, class: "post__more" %>
+							</div>
+						</article>
+					<% end %>
+				</div>
 
-  <h2>By Year</h2>
-  <ul>
-    <% blog.articles.group_by {|a| a.date.year }.each do |year, articles| %>
-      <li><%= link_to "#{year} (#{articles.size})", blog_year_path(year) %></li>
-    <% end %>
-  </ul>
-</aside>
+				</main>
 
-<br />
-<br />
-<br />
+				<aside class="aside">
+					<h2 class="section__label">Tags</h2>
+					<ul>
+						<% blog.tags.each do |tag, articles| %>
+							<li><%= link_to "#{tag} (#{articles.size})", tag_path(tag) %></li>
+						<% end %>
+					</ul>
 
-<!--
-<div id="main" role="main">
-  <%# = yield %>
-</div>
--->
+					<br />
+					<br />
 
-<br />
-<br />
-<br />
+					<h2 class="section__label">By Year</h2>
+					<ul>
+						<% blog.articles.group_by {|a| a.date.year }.each do |year, articles| %>
+							<li><%= link_to "#{year} (#{articles.size})", blog_year_path(year) %></li>
+						<% end %>
+					</ul>
+				</aside>
 
-<footer>
-  footer
-</footer>
+			</div><!-- /.main -->
 
-</div><!-- /.container -->
+		<!--
+		<div id="main" role="main">
+			<%# = yield %>
+		</div>
+		-->
 
-</body>
+			<footer>
+				footer
+			</footer>
+
+
+		</div><!-- /.container -->
+
+	</body>
 
 </html>
 
