mostly finished header and user nav

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -19,12 +19,12 @@
 		<div class="container">
 
 
-			<header class="header">
-				<div class="header__item">
+      <header class="header">
+        <div>
 					<svg class="logo">
-						<use xlink:href="images/sprite.svg#icon-feather"></use>
+						<use xlink:href="images/sprite.svg#icon-swarm"></use>
 					</svg>
-				</div>
+        </div>
 
 				<form action="#" class="search">
 					<input type="text" class="search__input" placeholder="Search" />
