--- a/source/styles/_layout.scss
+++ b/source/styles/_layout.scss
@@ -18,15 +18,14 @@
 }
 
 .header {
+  font-size: 1.4rem;
+  height: 7rem;
+	background-color: $color-grey-light-1;
+  border-radius: .25rem;
+
 	display: flex;
 	justify-content: space-between;
-	border-radius: .25rem;
-	background-color: $color-grey-light-1;
-
-	&__item {
-		width: 30%;
-		padding: .5rem 1rem .5rem;
-	}
+  align-items: center;
 }
 
 .main {
@@ -36,7 +35,7 @@
 .aside {
 	margin: 0 0 0 2rem;
 	padding: 0 0 0 2rem;
-	min-width: 20rem;
+	min-width: 25rem;
 	background-color: $color-grey-light-1;
 	border-radius: .25rem;
 }
