commit last nights changes to header and user nav

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -20,10 +20,12 @@
 
 
       <header class="header">
-        <div>
-					<svg class="logo">
-						<use xlink:href="images/sprite.svg#icon-swarm"></use>
-					</svg>
+        <div class="logo">
+					<span class="logo__span">
+						<svg class="logo__svg">
+							<use xlink:href="images/sprite.svg#icon-swarm"></use>
+						</svg>
+					</span>
         </div>
 
 				<form action="#" class="search">
