--- a/source/styles/_layout.scss
+++ b/source/styles/_layout.scss
@@ -1,11 +1,11 @@
 
 // container
 .container {
-	max-width: 120rem;
-	margin: 8rem auto;
 	background-color: $color-white;
 	box-shadow: $shadow-dark;
-
+  margin: 0 auto;
+  padding: 4rem 10rem;
+	max-width: 120rem;
 	min-height: 50rem;
 
 	@media only screen and (max-width: $bp-largest) {
@@ -13,8 +13,6 @@
 		max-width: 100%;
 		width: 100%;
 	}
-
-	padding: 10rem;
 }
 
 .header {
