--- a/source/styles/_layout.scss
+++ b/source/styles/_layout.scss
@@ -1,5 +1,5 @@
 
-// container
+// CONTAINER
 .container {
 	background-color: $color-white;
 	box-shadow: $shadow-dark;
@@ -15,6 +15,8 @@
 	}
 }
 
+
+// HEADER
 .header {
   font-size: 1.4rem;
   height: 7rem;
@@ -26,10 +28,14 @@
   align-items: center;
 }
 
+
+// MAIN
 .main {
 	display: flex;
 }
 
+
+// ASIDE
 .aside {
 	margin: 0 0 0 2rem;
 	padding: 0 0 0 2rem;
@@ -38,8 +44,10 @@
 	border-radius: .25rem;
 }
 
-/* header */
-/* footer */
+
+// FOOTER
+
+
 /* navigation */
 /* grid */
 
