--- a/source/styles/_base.scss
+++ b/source/styles/_base.scss
@@ -26,7 +26,7 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 3rem;
+  padding: 1.5rem;              // 3rem
 
   @include respond(tab-port) {
     padding: 0;
