--- a/source/styles/_components.scss
+++ b/source/styles/_components.scss
@@ -16,8 +16,8 @@
 	}
 
 	&__svg {
-		height: 3.25rem;
-		width: 3.25rem;
+		height: 4rem;     // 3.25rem
+		width: 4rem;      // 3.25rem
 		margin: 0 2rem;
 		fill: $color-grey-dark-3;
 
