--- a/source/styles/_base.scss
+++ b/source/styles/_base.scss
@@ -26,14 +26,14 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 1rem;              // 3rem
+  padding: .7rem;              // 3rem
 
   @include respond(tab-port) {
     padding: 0;
   }
 
   background-color: $color-grey-light-1;
-  box-shadow: inset 0 1rem $color-grey-dark;
+  box-shadow: inset 0 .7rem $color-grey-dark;
   min-height: 100vh;
 }
 
